HelloUltraviolet/Fixtures/RejectedSource/Expressions/RawDerefPlaceTypingFamily/Expected.uv
//! Expected diagnostic metadata for the RawDerefPlaceTypingFamily rejected-source specimen.

expectedDiagnostic("", "rule.16.DerefPlaceTypingFamily")
